Fixed wrap2 > p inherited height. Small fix for CSS grid media queries.

--- a/styles/scss/_cssGridStyles.scss
+++ b/styles/scss/_cssGridStyles.scss
@@ -191,7 +191,7 @@ body p {
 }
 
 @media only screen and (min-width: $screen-size-large) {
-  // .content-largest {
-  //   display: none;
-  // }
+  .message-mobile {
+    display: none;
+  }
 }
